# voice-dictator-by-neighbor

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
.github/: CODEOWNERS
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  hotkey.rs  lib.rs  logging.rs  main.rs  notifications.rs  pipeline.rs  state.rs  tray.rs
src-tauri/src/audio/: capture_cpal.rs  encode.rs  mod.rs  preprocess.rs
src-tauri/src/config/: mod.rs  schema.rs  secrets.rs  storage.rs
src-tauri/src/enhance/: mod.rs  openai_responses.rs
src-tauri/src/paste/: clipboard.rs  input.rs  mod.rs
src-tauri/src/stt/: mod.rs  offline_whisper.rs  openai.rs
src-tauri/src/vad/: mod.rs  silero.rs
src/routes/result/: +page.svelte
src/routes/settings/: +page.svelte
