[package]
name = "voice-dictator"
version = "0.1.0"
description = "Tray-first desktop app for voice dictation"
authors = ["neighbor"]
edition = "2021"
rust-version = "1.88"

[lib]
name = "voice_dictator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"

# Audio capture
cpal = "0.17"

# Audio encoding
ogg = "0.9"
opus = "0.3"

# HTTP client
reqwest = { version = "0.13", default-features = false, features = ["json", "multipart", "rustls", "charset", "http2"] }
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "6"

# Async
tokio = { version = "1", features = ["full"] }

# Clipboard + Input simulation
arboard = "3"
enigo = "0.6"

# Secrets (OS keychain)
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# VAD (ONNX runtime)
ort = "2.0.0-rc.11"
ndarray = "0.17"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
serial_test = "3"
